--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource-variable/onest": "^5.0.4",
+    "bulma": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
